# NewProject

./: CMakeLists.txt  Test2.cpp  Test2.h  main.cpp  task1.cpp  task1.h  task10.cpp  task10.h  task2.cpp  task2.h  task3.cpp  task3.h  task4.cpp  task4.h  task5.cpp  task5.h  task6.cpp  task6.h  task7.cpp  task7.h  task8.cpp  task8.h  task9.cpp  task9.h  test.cpp  test.h
