cmake_minimum_required(VERSION 3.20)
project(NewProject)

set(CMAKE_CXX_STANDARD 17)

add_executable(NewProject main.cpp test.h test.cpp Test2.h Test2.cpp task1.h task1.cpp task2.h task2.cpp task3.h task3.cpp task4.h task4.cpp task5.h task5.cpp task6.h task6.cpp task7.h task7.cpp task8.h task8.cpp task9.h task9.cpp task10.h task10.cpp)
